# NEU_DJI_Course

./: README.md
tagdetection/: CMakeLists.txt  README.md  qrcode.pptx  video.mpeg
tagdetection/include/: detection.hpp
tagdetection/src/: detection.cpp  main.cpp
